...
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uW8-ud-uIO">
                                                        <rect key="frame" x="15" y="218" width="345" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MZ1-Ng-mPc">
                                                        <rect key="frame" x="15" y="268" width="345" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User id" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ePr-oh-1s4">
                                                        <rect key="frame" x="15" y="168" width="345" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" enablesReturnKeyAutomatically="YES"/>
                                                    </textField>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tXY-x1-ewq">
                                                        <rect key="frame" x="15" y="325" width="345" height="38"/>
                                                        <color key="backgroundColor" red="0.08235294118" green="0.53333333329999999" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="38" id="3FH-Ld-raU"/>
                                                        </constraints>
                                                        <state key="normal" title="Get Started">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="getStartedBtn:" destination="8Me-ai-yhR" eventType="touchUpInside" id="jCK-0O-nlD"/>
                                                        </connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8m-xJ-WFx">
                                <rect key="frame" x="112" y="40" width="150" height="80"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="6Cw-sB-3UA"/>
                                    <constraint firstAttribute="width" constant="150" id="by7-Lu-vVx"/>
                                </constraints>
                                <state key="normal" title="Launch Chat"/>
                                <connections>
                                    <action selector="launchChatList:" destination="cKx-Tb-vxu" eventType="touchUpInside" id="TyA-dO-HG0"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ssZ-Yk-kdS">
                                <rect key="frame" x="137" y="220" width="100" height="50"/>
...
