/*
  Localizable.strings

  Created by Mukesh Thawani on 07/08/17.
*/

Back = "Back";
ChatHere = "Type your message...";
AttachmentCaptionHere = "Add Caption...";
DeleteSingleConversation = "Are you sure you want to remove the chat with";
LeaveGroupConversation = "Are you sure you want to leave the group";
DeleteGroupConversation = "Are you sure you want to remove the group";
ButtonCancel = "Cancel";
CamNotAvaiable = "Unable to start your camera";
PleaseAllowCamera = "Please change Settings to allow to access your camera";
UnspecifiedLocation = "Unspecified Location";
PhotoAlbumSuccessTitle = "Done";
PhotoAlbumSuccess = "Photo saved";
PhotoAlbumOk = "Ok";
PhotoAlbumFailureTitle = "Error";
PhotoAlbumFail = "Save failed";
DownloadOriginalImageFail = "Fail to download the original image";
IsTypingForRTL = "typing is %@";
ButtonDiscard = "Discard";

// Storyboard
LocationTitle = "Location";
DoneButton = "Done";
AddToGroupTitle = "Add to Group";
InviteButton = "INVITE";
CreateGroupTitle = "Create Group";
EditGroupTitle = "Edit Group";
SaveButtonTitle = "Save";
InviteMessage = "Invite";
DiscardChangeTitle = "Discard Change";
DiscardChangeMessage = "If you go back now, your change will be discarded";
Edit = "Edit";
Camera = "Camera";
CropImage = "Crop Image";
ResetPhotoButton = "Reset Photo";
SelectButton = "Select";
SendPhoto = "Send Photo";
PhotosTitle = "Photos";
CaptionScreenTitle = "Add Captions"; 
CameraNotAvailableMessage = "Camera is not Available !!!";
GalleryNotAvailableMessage = "Gallery is not available";
ImageCroppedMessage = "Image cropped";
ImageResetMessage = "Image reset";
CameraNotAvailableTitle = "OOPS !!!";
ShareLocationTitle = "Share Location";
SendLocationButton = "Send Location";
Participants = "Participants";
TypeGroupName = "Type group name";
NewChatTitle = "New Chat";
SearchPlaceholder = "Search";
HoldToTalkMessage = "Hold to Talk / Tap to Type";

RecordingMessage = "Recording";
MicrophoneNotAvailableMessage = "Microphone is not available";
AllowSoundRecordingMessage = "Please change Settings to allow sound recording";
SlideToCancelMessage = "Slide to cancel";
FriendAddedMessage = "Friend Added";
FriendRemovedMessage = "Friend Removed";
CheckImageAndNameField = "Please input display name and profile image";
UpdateMoodMessage = "Update Mood success";
UpdateProfileSuccessMessage = "Update Profile success";
FailedToUpdateMessage = "Failed to update";

EnterEmailMessage = "Please enter email address";
InvalidEmailMessage = "Invalid email address";
InvalidReply = "Invalid Reply";
FillAllFieldsMessage = "Please fill-in all fields";
FillPasswordMessage = "Please fill-in password";
PasswordNotMatchedMessage = "Password does not match the confirm password";
CancelMessage = "Cancelled";
ConnectionFailedMessage = "Connection failed. Please retry again";
FetchFailedMessage = "Fetch data failed. Please retry again";
OperationFailedMessage = "Operation could not be completed. Please retry again";
RemoveMessage = "Are you sure you want to remove";
UploadingImageMessage = "The image is being uploaded";
SignOutMessage = "Are you sure you want to sign out?";
SignOutButtonName = "Sign out";
RetryButtonName = "Retry";
RemoveButtonName = "Remove";
LeaveButtonName = "Leave";
DeleteButtonName = "Delete";
NoNameMessage = "No Name";
ConversationListVCTitle = "My Chats";
Somebody = "Somebody";
EnableCameraPermissionMessage = "Enable Camera Permission";
FillGroupName = "Please fill out group name";
Settings = "Settings";
Cancel = "Cancel";
SendVideo = "Send Video";
NotNow = "Not Now";
IsTyping = "%@ is typing";
AreTyping = " are typing";
Copy = "Copy";
Reply = "Reply";
You = "You";
Source = "Source";

NotPartOfGroup = "You are not part of this group";
MuteChannel = "Mute group %@";
MuteUser = "Mute user %@";
UnmuteChannel = "Are you sure you want to unmute group %@";
UnmuteUser = "Are you sure you want to unmute user %@";
ConfirmButton = "Confirm";
EightHour = "8 Hours";
OneWeek = "1 Week";
OneYear = "1 Year";
MuteButton = "Mute";
UnmuteButton = "Unmute";
NoConversationsLabelText = "Start to chat with your friends by tapping the 'New Chat' button";
Online = "Online";
LastSeen = "Last seen %@";
JustNow = "just now";
MinutesAgo = "%@ mins ago";
HoursAgo = "%@ hrs ago";
LoadingIndicatorText = "Loading...";
BlockTitle = "Block";
UnblockTitle = "Unblock";
BlockUser = "Are you sure you want to block user %@";
UnblockUser = "Are you sure you want to unblock user %@";
ErrorMessage = "OOPS !!! Some error occured";
OkMessage = "Ok";
BlockSuccess = "Successfully blocked";
UnblockSuccess = "Successfully unblocked";
UnblockToEnableChat = "Unblock user to enable chat";
profaneWordsTitle = "Profane Words";
profaneWordsMessage = "Please avoid using profane words.";
Admin = "Admin";
AddParticipant = "Add participants";
RemoveUser = "Remove user";
MakeAdmin = "Make group admin";
DismissAdmin = "Dismiss group admin";
SendMessage = "Send message";
RemoveFromGroup = "Remove %@ from the \"%@\" group?";
Info = "Info";
VideoExportError = "Some error occured while exporting files";
ReportAlertTitle = "Are you sure you want to report this message?";
ReportAlertMessage = "If you report the message, it will be sent to admin of this application for review";
ReportMessage = "REPORT MESSAGE";
ReportMessageSuccess = "Message has been reported";
ReportMessageError = "Failed to report the message";
NetworkAccessFailedMessage = "No internet access";
CapitalLetterCancelText = "CANCEL";
EmailWebViewTitle =  "Email";
OkayMessage = "OKAY";
ReplyInfoMessage = "We are unable to directly retrieve this message for you. You can still scroll up your messages and view it.";
FailedToLoadLink = "Failed to load a link";
ExportLoadingIndicatorText = "Exporting...";

/* Speech to text */
SpeechToTextPlaceholder = "(Go ahead, I'm listening)";

DatePickerTimeTitle = "Select time";
DatePickerDateTitle = "Select date";
DatePickerDateAndTimeTitle = "Select date and time";

/* Form UI*/
InvalidDatErrorInForm = "Please enter valid data";

RichMessageImagePreviewTitle = "Image";

EnableCameraPermissionMessage = "Enable Contact Permission";

GroupDescriptionHeaderTitle = "Group Description";

/* Group Description VC */
GroupDescriptionVCTitle = "Group Description";
RemainingCharactersInfo = "Remaining characters: %@";
AddGroupDescriptionPlaceHolder = "Add group description";

/* Feedback */
 RatingLabelTitle = "You";
 ConversationRatingMenuTitle = "Rate this conversation";

/* Conversation Restriction */
ConversationRestrictedMessage = "You are restricted to type or send any message as you are no longer part of this conversation.";
ZendeskConversationInfoMessage = "This chat is integrated with Zendesk Zopim. Please use Zendesk dashboard to respond and communicate with the users.";
TemplateMessageRestrictionInfo = "The last message received from this contact was over 24 hours ago. To send Template message, go to the dashboard.";

/* Misc */
SelectLanguageTitle = "Select a language";
ViaEmailLabel = "via email";
SourceLabel = "Source";
NewAttachmentLabel = "New Attachment";

/* Summary UI */
 SummaryPopUpTitle = "Summary";
 SummaryInfoLabel = "Conversation Summary";
 SummaryReadMoreLabel = "Read More";

/* Assigned To */
 AssignedLabel = "Conversation transferred to";

/* Delete Conversation */
DeleteConversationTitle = "Delete Conversation";
DeleteConversationContent = "Do you want to delete the conversation?";
DeleteConversationSuccessMessage = "Successfully deleted the conversation!!!";
DeleteConversationFailureMessage = "Failed to delete the conversation!!!";
/* upload Max size  restriction messages */
uploadRestrictionTitle = "File Too Big!!";
uploadRestrictionMessage = "Looks like the file you are trying to upload is too big.";

/* Last Message of conversation */
Photo = "photo";
Location = "Location";
Audio = "Audio";
Update = "Update";
Video = "Video";
Message = "Message";
FAQ = "FAQ";
Document = "Document";
Contact = "Contact";
Buttons = "Buttons";
File = "File";


/* Suspension Screen Messages */

TrialUserDisconnectionMessage = "Trial users cannot access this feature in release mode. Please upgrade your plan to continue. \nFor further assistance, contact support at support@kommunicate.io.";
MobileNotSupportedMessage = "Your current plan does not support mobile access. \nPlease update your subscription to gain full access.";
ChurnedUserDisconnectionMessage = "Your app provider needs to renew their subscription to enable access to messaging features.";

/* Voice Mode */
VoiceModeListening = "Listening…";
VoiceModeTranscribing = "Transcribing…";
VoiceModeSpeaking = "Speaking";
VoiceModeError = "Please try again";
VoiceModeMicrophone = "Voice mode microphone";
VoiceModeClose = "Close voice mode";
VoiceModePoweredBy = "AI Agent powered by Kommunicate";
VoiceModePermission = "Microphone access is required to use voice mode.";
