...
    var showReport: Bool = false

    public func setLocalizedStringFileName(_ localizedStringFileName: String) {
        self.localizedStringFileName = localizedStringFileName
    }

    fileprivate weak var chatBar: ALKChatBar?

    lazy var longPressGesture: UILongPressGestureRecognizer = .init(target: self, action: #selector(showMenuController(withLongPress:)))

    var avatarTapped: (() -> Void)?

    /// It will be invoked when one of the actions
...
